src/core-crm/objects/Interest__c/Interest__c.object-meta.xml
<CustomObject>
    <description>Stores the reference data for ‘Interests’.</description>
    <label>Interest</label>
    <nameField>
        <displayFormat>I-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>