src/core-crm/objects/Interest__c/fields/Interest_Category__c.field-meta.xml
<CustomField>
    <fullName>Interest_Category__c</fullName>
    <description>The Interest Category.</description>
    <inlineHelpText>The Interest Category.</inlineHelpText>
    <label>Interest Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interest_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts and Culture</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Family and Community</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Welfare and Rights</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>