src/core-crm/objects/Interest__c/fields/Interest_Type__c.field-meta.xml
<CustomField>
    <fullName>Interest_Type__c</fullName>
    <description>The Interest Type the Category is related to.</description>
    <inlineHelpText>The Interest Type the Category is related to.</inlineHelpText>
    <label>Interest Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>